examples/should-fail/f49_impred_bad_universe_expectation.lean
def demo4_bad_universe_expectation : Sort 2 :=
  (A : Type) -> Prop
